--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gh-pages": "3.1.0",
     "jest": "25.1.0",
     "node-sass": "5.0.0",
+    "prettier": "2.2.1",
     "react-test-renderer": "16.12.0",
     "redux-devtools-extension": "2.13.8",
     "redux-mock-store": "1.5.4",
@@ -46,6 +47,7 @@
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
     "reselect": "4.0.0",
-    "styled-components": "5.2.1"
+    "styled-components": "5.2.1",
+    "styled-normalize": "^8.0.7"
   }
 }
