--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
     "reselect": "4.0.0",
+    "styled-bootstrap-grid": "^3.1.0",
     "styled-components": "5.2.1",
     "styled-normalize": "^8.0.7"
   }
