--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node": "10"
   },
   "dependencies": {
+    "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
     "nanoid": "3.1.20",
     "prop-types": "15.7.2",
@@ -47,7 +48,6 @@
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
     "reselect": "4.0.0",
-    "styled-bootstrap-grid": "^3.1.0",
     "styled-components": "5.2.1",
     "styled-normalize": "^8.0.7"
   }
